写了一个测试类，来测试触发fullGC时，是否会回收掉直接内存